Closed
Bug 1065218
Opened 10 years ago
Closed 10 years ago
Switch MediaSourceReader timestamp handling from double/seconds to int64_t/microseconds
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: kinetik, Assigned: kinetik)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
15.14 KB,
patch
|
karlt
:
review+
|
Details | Diff | Splinter Review |
As mentioned in bug 1062670 comment 2.
Assignee | ||
Comment 1•10 years ago
|
||
Assignee | ||
Comment 2•10 years ago
|
||
Comment on attachment 8486916 [details] [diff] [review]
Convert MediaSourceReader timestamp handling to int64_t/microseconds.
This also removes SourceBufferDecoder::ContainsTime, since it's only ever used in an assertion (and that assertion will be reported by seek returning an NS_ERROR, anyway).
Attachment #8486916 -
Flags: review?(cajbir.bugzilla)
Updated•10 years ago
|
Attachment #8486916 -
Flags: review?(cajbir.bugzilla) → review?(karlt)
Assignee | ||
Comment 3•10 years ago
|
||
Rebased.
Attachment #8486916 -
Attachment is obsolete: true
Attachment #8486916 -
Flags: review?(karlt)
Attachment #8486975 -
Flags: review?(karlt)
Comment 4•10 years ago
|
||
Comment on attachment 8486975 [details] [diff] [review]
Convert MediaSourceReader timestamp handling to int64_t/microseconds.
(In reply to Matthew Gregan [:kinetik] from comment #2)
> This also removes SourceBufferDecoder::ContainsTime, since it's only ever
> used in an assertion (and that assertion will be reported by seek returning
> an NS_ERROR, anyway).
I'm not clear that ContainsTime() failure always implies Seek() failure, but that is quite a bit of code for the sake of an assertion that sometimes fails anyway (bug 1064113), so that shouldn't get in the way of progress here.
Attachment #8486975 -
Flags: review?(karlt) → review+
Assignee | ||
Comment 5•10 years ago
|
||
Assignee | ||
Comment 6•10 years ago
|
||
Assignee | ||
Comment 7•10 years ago
|
||
Comment 8•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in
before you can comment on or make changes to this bug.
Description
•