Bug 1065218 - Convert MediaSourceReader timestamp handling to int64_t/microseconds.  r=karlt