content/media/mediasource/TrackBuffer.cpp
@@ -314,13 +314,13 @@ TrackBuffer::SetLastEndTimestamp(int64_t aEnd)
 }
 
 bool
-TrackBuffer::ContainsTime(double aTime)
+TrackBuffer::ContainsTime(int64_t aTime)
 {
   ReentrantMonitorAutoEnter mon(mParentDecoder->GetReentrantMonitor());
   for (uint32_t i = 0; i < mInitializedDecoders.Length(); ++i) {
     nsRefPtr<dom::TimeRanges> r = new dom::TimeRanges();
     mInitializedDecoders[i]->GetBuffered(r);
-    if (r->Find(aTime) != dom::TimeRanges::NoIndex) {
+    if (r->Find(double(aTime) / USECS_PER_S) != dom::TimeRanges::NoIndex) {
       return true;
     }
   }
