content/media/mediasource/TrackBuffer.h
@@ -70,7 +70,7 @@ public:
 
   // Returns true if any of the decoders managed by this track buffer
   // contain aTime in their buffered ranges.
-  bool ContainsTime(double aTime);
+  bool ContainsTime(int64_t aTime);
 
   void BreakCycles();
 
